# mrimgx_file_layout

./: .gitignore  LICENSE.txt
contrib/extract-to-img/: LICENSE.txt  WORKSPACE
contrib/extract-to-img/dependencies/: BUILD
contrib/extract-to-img/libs/: BUILD
contrib/extract-to-img/src/: BUILD  main_linux.cpp  main_win.cpp
demo/: README.md
docs/: ENCRYPTION.md  FILE_LAYOUT.md  README.md  index.html
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_07860379bac6054c72d90228e0caed62.html  dir_12248a83bb90317436a87e9fc38e573d.html  dir_12248a83bb90317436a87e9fc38e573d.js  dir_15e1882d1c4de72b3c83b902cb5faff2.html  dir_15e1882d1c4de72b3c83b902cb5faff2.js  dir_2fc69cfca547a75c976f5233299f5f4d.html  dir_34285ecb0ee8fd6ba963d985ce135e66.html  dir_34285ecb0ee8fd6ba963d985ce135e66.js  dir_433eb510f58a9368f331871e4307c2ab.html  dir_433eb510f58a9368f331871e4307c2ab.js  dir_5aeab6be054ce5051a82abdc083c1b4c.html  dir_5aeab6be054ce5051a82abdc083c1b4c.js  dir_88e100402737e4fa918e4aa5a7dba644.html  dir_88e100402737e4fa918e4aa5a7dba644.js  dir_89ba79a4af698e9a0f72a28273c38cea.html  dir_89ba79a4af698e9a0f72a28273c38cea.js  dir_96f40ed729f7c458ab202dbc89a67627.html  dir_96f40ed729f7c458ab202dbc89a67627.js  dir_e3570ea87f4174441a9203ab2b6322c5.html  dir_e3570ea87f4174441a9203ab2b6322c5.js  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  (+60 more)
schema/: README.md  complete_schema.json  required_schema.json
schema/examples/: file_and_folder_1.json  image_1.json
src/: CMakeLists.txt  CMakePresets.json  IMG_TO_VHDX.md  README.md  STANDARDS.md  img_to_vhdx.sln
src/dependencies/include/openssl/: configuration.h
src/dependencies/lib/zlib/debug/: zlib.lib
src/dependencies/lib/zlib/release/: zlib.lib
src/dependencies/lib/zstd/debug/: libzstd.lib
src/img_to_vhdx/: CMakeLists.txt  arg_validator.cpp  arg_validator.h  console_print.cpp  console_print.h  img_to_vhdx.cpp  img_to_vhdx.vcxproj  img_to_vhdx.vcxproj.filters  vhdx_handler.cpp  vhdx_handler.h
src/libs/encryption/: CMakeLists.txt  encryption.cpp  encryption.h  encryption.vcxproj  encryption.vcxproj.filters  framework.h
src/libs/file_operations/: CMakeLists.txt  file_operations.cpp  file_operations.h  file_operations.vcxproj  file_operations.vcxproj.filters  framework.h
src/libs/file_reader/: CMakeLists.txt  backup_set.cpp  backup_set.h  disk_structs.h  enums.h  enums_to_text.cpp  file_reader.cpp  file_reader.h  file_reader.vcxproj  file_reader.vcxproj.filters  file_structs.h  framework.h  metadata_block_reader.cpp  metadata_block_reader.h  metadataheader.h
src/libs/restore/: CMakeLists.txt  crc32.cpp  crc32.h  framework.h  restore.cpp  restore.h  restore.vcxproj  restore.vcxproj.filters
src/libs/vhdx_manager/: CMakeLists.txt  framework.h  vhdx_manager.cpp  vhdx_manager.h  vhdx_manager.vcxproj  vhdx_manager.vcxproj.filters
(+399 files in other folders)
